[gd_scene load_steps=10 format=2]

[ext_resource path="res://components/button_base/button_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/icons/icon_tool.svg" type="Texture" id=2]
[ext_resource path="res://components/item_base/item_base.gd" type="Script" id=3]
[ext_resource path="res://assets/font/RubikItalicSmallest.tres" type="DynamicFont" id=4]
[ext_resource path="res://components/skill_icon/skill_icon.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/salvage_overlay.svg" type="Texture" id=7]
[ext_resource path="res://theme.tres" type="Theme" id=9]
[ext_resource path="res://assets/icons/icon_expand.svg" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 3
border_color = Color( 1, 1, 1, 1 )

[node name="Item" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 446.0
mouse_filter = 1
size_flags_horizontal = 3
theme = ExtResource( 9 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Container" type="VBoxContainer" parent="."]
margin_top = 3.0
margin_right = 700.0
margin_bottom = 79.0
size_flags_vertical = 0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="MarginContainer" parent="Container"]
margin_right = 700.0
margin_bottom = 76.0
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Container" type="HBoxContainer" parent="Container/Top"]
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 60 )
size_flags_vertical = 0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Container/Top/Container"]
margin_top = 6.0
margin_right = 48.0
margin_bottom = 54.0
rect_min_size = Vector2( 48, 48 )
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="SetNumber" type="Label" parent="Container/Top/Container/Icon"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -12.0
margin_top = -2.0
margin_right = 8.0
margin_bottom = 27.0
rect_scale = Vector2( 0.6, 0.6 )
text = "1"
align = 2

[node name="Labels" type="VBoxContainer" parent="Container/Top/Container"]
margin_left = 58.0
margin_right = 614.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Info" type="HBoxContainer" parent="Container/Top/Container/Labels"]
modulate = Color( 0.666667, 0.666667, 0.666667, 1 )
margin_top = 3.0
margin_right = 556.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 24 )
custom_constants/separation = 0

[node name="Slot" type="Label" parent="Container/Top/Container/Labels/Info"]
margin_top = 1.0
margin_right = 48.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "HULL"
uppercase = true

[node name="P1" type="Label" parent="Container/Top/Container/Labels/Info"]
margin_left = 48.0
margin_top = 1.0
margin_right = 59.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = " ("
uppercase = true

[node name="Rarity" type="Label" parent="Container/Top/Container/Labels/Info"]
margin_left = 59.0
margin_top = 1.0
margin_right = 128.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "UNIQUE"
uppercase = true

[node name="P2" type="Label" parent="Container/Top/Container/Labels/Info"]
margin_left = 128.0
margin_top = 1.0
margin_right = 135.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = ")"
uppercase = true

[node name="Name" type="Label" parent="Container/Top/Container/Labels"]
margin_top = 27.0
margin_right = 556.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "NAME"
clip_text = true

[node name="Skill" parent="Container/Top/Container" instance=ExtResource( 5 )]
visible = false
margin_left = 618.0
margin_right = 678.0

[node name="Expand" parent="Container/Top/Container" instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = 624.0
margin_right = 684.0
margin_bottom = 60.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Container/Top/Container/Expand"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Details" type="VBoxContainer" parent="Container"]
margin_top = 76.0
margin_right = 700.0
margin_bottom = 76.0
custom_constants/separation = 0

[node name="Attributes" type="VBoxContainer" parent="Container/Details"]
margin_right = 700.0
custom_constants/separation = 0

[node name="SalvageOverlay" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.529412, 0.529412, 0.529412, 1 )
margin_top = 3.0
margin_right = 700.0
margin_bottom = 446.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Container/Top/Container/Expand" to="." method="_on_Expand_button_down"]
